[package]
name = "hello-tonic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.12.3"
prost = "0.13.3"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.16"
async-stream = "0.3.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.12.3"
